# multilayer-perceptron

./: .gitignore  LICENSE  build_package.sh  callback.py  initializer.py  install_packages.sh  layers.py  learning_curve.py  load_csv.py  model.py  model_keras.py  optimizer.py  predict.py  predict_keras.py  pyproject.toml  sequential.py  split_dataset.py  test.py  train.py  train_keras.py
smlp/callback/: callback.py  earlystop.py  history.py
smlp/initializer/: glorotNormal.py  glorotUniform.py  heNormal.py  heUniform.py  zeros.py
smlp/layer/: layers.py
smlp/model/: model.py  sequential.py
smlp/optimizer/: adam.py  optimizer.py  rmsprop.py  sgd.py
smlp_package/: README.md
smlp_package/src/smlp/: __init__.py
smlp_package/src/smlp/callbacks/: __init__.py  callback.py  early_stopping.py  history.py
smlp_package/src/smlp/initializers/: glorotUniform.py  zeros.py
smlp_package/src/smlp/layers/: __init__.py  dense.py  input.py  layer.py  layers.py
smlp_package/src/smlp/models/: model.py  sequential.py
smlp_package/src/smlp/optimizers/: adam.py  rmsprop.py  sgd.py
smlp_package/src/smlp/utils/: __init__.py  utils.py
src/smlp/activations/: __init__.py  activation.py
src/smlp/initializers/: __init__.py  glorotNormal.py  heNormal.py  heUniform.py  initializer.py
src/smlp/layers/: __init__.py  layers.py
src/smlp/models/: __init__.py  model.py  sequential.py
src/smlp/optimizers/: __init__.py  adam.py  optimizer.py  sgd.py
test/: install_packages.sh  load_csv.py  predict_keras.py  split_dataset.py  train.py
