[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smlp"
authors = [
    { name = "seseo", email = "seseo@student.42seoul.kr" }
]
description = "multilayer perceptron framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
version = "0.0.1"

[project.urls]
"Home-page" = "https://github.com/lscitl/multilayer-perceptron"